# infinitevibe

./: .env  .env.example  .env.instagram_only  .gitignore  BRIEF_SYSTEM_IMPLEMENTATION.md  BUG_FIXES_SUMMARY.md  ORIGINAL_INFINITEVIBE_README.md  README.md  VALIDATOR_INTEGRATION.md  demo_bug_fixes.py  demo_edge_case_fixes.py  demo_week1_implementation.py  demo_week2_implementation.py  enhanced_validator_v2.py  main.py  migrate_follower_history.py  miner_submissions_report.py  modified_validator.py  monitor_growth_scores.py  new_growth_scoring.py  pyproject.toml  requirements.txt  start_follower_analyzer.sh  start_growth_validator.sh  start_validator_with_background_bot.sh  start_validator_with_bot_detection.sh  submissions.jsonl  test_bot_detector.py  validator_upgrade.sh
docs/: how-subnet-works.md  mining.md  validating.md
infinitevibe_complete/: .gitignore  QUICK_FIX_INSTRUCTIONS.md  README.md  debug_analyzer.py  debug_mongodb.py  fixed_setup.sh  modified_validator.py  simple_validator_with_bot_detection.py  start_ai_detector.sh  start_follower_analyzer.sh  start_simple_validator.sh  start_tracker.sh  start_validator.sh  start_validator_with_bot_detection.sh
infinitevibe_complete/docs/: validating.md
infinitevibe_complete/examples/: basic_usage.py
neurons/: mining-rest.py  mining.py  validating.py
scripts/: do_commit.py
scripts/validator/: run.py
src/: background_follower_analyzer.py  detector.py  instagram_api.py  validator_bot_integration.py  validator_integration.py
tensorflix/: config.py  protocol.py  validator.py
tests/: __init__.py
(+34 files in other folders)
