[project]
name = "tensorflix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apify-client>=1.10.0",
    "async-substrate-interface>=1.2.2",
    "bittensor-cli>=9.4.2",
    "bittensor-wallet>=3.0.10",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.2",
]
