[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tensorflix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apify-client>=1.10.0",
    "async-substrate-interface>=1.2.2",
    "bittensor>=9.7.0",
    "bittensor-cli>=9.4.2",
    "bittensor-wallet>=3.0.10",
    "boto3>=1.35.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "rich>=14.0.0",
    "streamlit>=1.22.0",
    "tqdm>=4.67.1",
]


[tool.hatch.build.targets.wheel]
packages = ["tensorflix"]

[project.scripts]
tensorflix-submission = "tensorflix.submission.manage_submission:app"
